src/test/testData/kubernetes/KUBE001/cronjob.yaml.denied
apiVersion: batch/v1
kind: CronJob
metadata:
  name: hello
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          securityContext:
            runAsNonRoot: <error descr="Container runs as root or can gain root privileges.">false</error>
          containers:
          - name: hello
            image: busybox
            imagePullPolicy: IfNotPresent
            command:
            - /bin/sh
            - -c
            - date; echo Hello from the Kubernetes cluster
          - name: hello2
            securityContext:
              runAsNonRoot: <error descr="Container runs as root or can gain root privileges.">false</error>
          restartPolicy: OnFailure